# g2-sdk-python

./: .gitignore  .project  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  setup.cfg
.github/: CODEOWNERS
.github/linters/: .jscpd.json
docs/releases/: senzing-1.10.0-py3-none-any.whl  senzing-1.10.0-py3-none-any.whl.asc  senzing-1.10.0.tar.gz.asc  senzing-1.10.1-py3-none-any.whl  senzing-1.10.1-py3-none-any.whl.asc  senzing-1.10.1.tar.gz.asc  senzing-1.10.2-py3-none-any.whl  senzing-1.10.2-py3-none-any.whl.asc  senzing-1.10.2.tar.gz.asc  senzing-1.10.3-py3-none-any.whl  senzing-1.10.3-py3-none-any.whl.asc  senzing-1.10.3.tar.gz.asc  senzing-1.10.4-py3-none-any.whl  senzing-1.10.4-py3-none-any.whl.asc  senzing-1.10.4.tar.gz.asc  senzing-1.10.5-py3-none-any.whl  senzing-1.10.5-py3-none-any.whl.asc  senzing-1.10.5.tar.gz.asc  senzing-1.11.0-py3-none-any.whl  senzing-1.11.0-py3-none-any.whl.asc  senzing-1.11.0.tar.gz.asc  senzing-1.12.0-py3-none-any.whl  senzing-1.12.0-py3-none-any.whl.asc  senzing-1.12.0.tar.gz.asc  senzing-1.12.1-py3-none-any.whl  senzing-1.12.1-py3-none-any.whl.asc  senzing-1.12.1.tar.gz.asc  senzing-1.12.2-py3-none-any.whl  senzing-1.12.2-py3-none-any.whl.asc  senzing-1.12.2.tar.gz.asc  senzing-1.13.0-py3-none-any.whl  senzing-1.13.0-py3-none-any.whl.asc  senzing-1.13.0.tar.gz.asc  senzing-1.13.1-py3-none-any.whl  senzing-1.13.1-py3-none-any.whl.asc  senzing-1.13.1.tar.gz.asc  (+195 more)
tests/: test-TranslateG2ModuleException.py  test-deprecation-1.py  test-deprecation-2.py  test-enums.py  test-g2engineflags.py  test-imports.py
(+16 files in other folders)
