[metadata]
name = senzing
version = 0.0.3
author = senzing
author_email = support@senzing.com
description = Python SDK to Senzing API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Senzing/g2-sdk-python
project_urls =
    Bug Tracker = https://github.com/Senzing/g2-sdk-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
